--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 </head>
 <body>
     <h1>PWA</h1>
-    <script src="./script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
